# Capricorn

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  codecov.yml  push.sh  support.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: contains.rs  data_format.rs  deletes.rs  document_selection.rs  each.rs  has.rs  lib.rs  match_html.rs  node.rs  parse.rs  replace.rs  splits.rs  text_attr_html.rs
src/data_format/: data_format.rs  deletes.rs  mod.rs  replaces.rs  splits.rs
test_html/: index.yml  regexes_match_parse_html.yml  test.html  test.yml
test_pages/: default_val.yml  each.html  each.yml  exec_order.yml  index.html  index.yml  last.html  nodes.html  nodes.yml  regex.html  regex.yml  regexes_match_parse_html.yml  replace.html  replace.yml  test.html  test.yml  text_attr_html.html  text_attr_html.yml
tests/: regex.rs  test_attr.rs  test_default_value.rs  test_each.rs  test_exec_order.rs  test_html.rs  test_nodes.rs  test_replace.rs  test_text_attr_html.rs
