[package]
name = "capricorn"
version = "0.1.93"
authors = ["petechen <15736755067@163.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/Capricorn/blob/main/README.md"
repository = "https://github.com/ptechen/Capricorn.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Parse html according to configuration"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nipper = "0.1.8"
quicli = "0.4.0"
serde_yaml = "0.8.15"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
tendril = "0.4.2"
regex = "1.4.3"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false
